<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">CallAssistant</string>
    <string name="text_normal">%1$s %2$s %3$s</string>
    <string name="text_poi">%1$s %2$s %3$s %4$s</string>
    <string name="text_report">%1$s %2$s %3$s, tagged by %4$d users as %5$s</string>
    <string name="close_float_window">Tap to hide the float window</string>
    <string name="action_settings">Settings</string>
    <string name="action_float_window">Float window position</string>
    <string name="float_window_hint">Drag to move</string>
    <string name="dialpad_hint">Enter number</string>
    <string name="dial">Dial</string>
    <string name="dial_number">Dial %1$s</string>
    <string name="action_call_back">Call back</string>
    <string name="action_search">Search</string>
...
    <string name="search_hint">Search phone number&#8230;</string>
    <string name="no_history">No incoming call log</string>
    <string name="unknown">No data</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_error">Loading failed</string>
    <string name="color">Color</string>
    <string name="color_normal">Normal number</string>
    <string name="color_poi">Business number</string>
    <string name="color_report">Reported number</string>
    <string name="about">About</string>
    <string name="author" tools:ignore="UnusedResources">Author</string>
    <string name="version">Version</string>
    <string name="license">License</string>
    <string name="developer">Developer</string>
    <string name="developer_summary" translatable="false">qiq &lt;bjakl@proton.me&gt;</string>
...
    <string name="app_package_name" translatable="false" tools:ignore="UnusedResources">
        com.github.soinlee.callassistant
    </string>
    <string name="advanced">Advanced</string>
    <string name="custom_bd_api_key">Custom BAIDU API key</string>
    <string name="float_window">Float window</string>
    <string name="window_transparent">Transparency</string>
    <string name="window_text_size">Font size</string>
    <string name="window_close_anim">Animation on hide</string>
    <string name="text_size">Drag to change font size.</string>
    <string name="text_transparent">Drag to change transparency.</string>
    <string name="window_trans_back_only">Transparency only applies for background</string>
    <string name="close_window">Hide float window</string>
    <string name="undo">undo</string>
    <string name="deleted">Deleted</string>
    <string name="api_baidu">BAIDU Phone Number Service</string>
    <string name="ignore_known_contact">Ignore calls from contact list</string>
    <string name="display_on_outgoing">Show on outgoing calls</string>
    <string name="fetch">Fetch</string>
    <string name="baidu_api_url" translatable="false">http://apistore.baidu.com/astore/usercenter
    </string>
    <string name="show_hidden_toast">Tap %1$d more times to show hidden settings</string>
    <string name="force_chinese">Use Chinese as app language</string>
    <string name="hide_when_off_hook">Hide after accepting</string>
    <string name="document">Document</string>
    <string name="api_url_hint">API URL</string>
    <string name="api_key_hint">API key</string>
    <string name="hide_when_touch">Hide on tap</string>
    <string name="contact_offline">Show contact location when offline</string>
    <string name="online_failed">Online fetch failed</string>
    <string name="offline_failed">Number not found in offline data</string>
    <string name="window_visibility">Show and hide</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_clear_history">Clear call log</string>
    <string name="clear_history_message">Clear all call logs?</string>
    <string name="ring_once">Ring once</string>
    <string name="empty_string" translatable="false" />
    <string name="baidu_advertising" translatable="false">百度糯米</string>
    <string name="window_text_alignment">Window text alignment</string>
    <string name="align_left">Align left</string>
    <string name="align_center">Align center</string>
    <string name="align_right">Align right</string>
    <string name="window_height">Window height</string>
    <string name="window_height_message">Drag to change window height.</string>
    <string name="window_text_style">Text style</string>
    <string name="window_text_color">Enable text color</string>
    <string name="ignore_regex">Ignore number range</string>
    <string name="ignore_regex_hint">Please split keywords with space</string>
    <string name="example">Example</string>
    <string name="regex_example">Match a number with a star(*), split ranges with a space, To match
        \"1000–19999\", please enter \"1*** 1****\", to match \"550–579\", please enter \"55* 56*
        57*\"
    </string>
    <string name="window_text_padding">Window text padding</string>
    <string name="text_padding">Drag to change text padding.</string>
    <string name="icon">Icon</string>
    <string name="action_bar_up_description">Navigate up</string>
    <string name="disable_notify">Disable notification</string>
    <string name="disable_move">Disable move</string>
    <string name="readable_second">%1$d s</string>
    <string name="readable_minute">%1$02d m %2$02d s</string>
    <string name="readable_hour">%1$02d:%2$02d:%3$02d</string>
    <string name="readable_today">Today</string>
    <string name="readable_yesterday">Yesterday</string>
...
